colors1.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: colors
  labels:
    version: v1.0
spec:
  containers:
    - name: colors
      image: augustopimenta/colors:1.1
      args: ["-health=50"]
      livenessProbe:
        httpGet:
          path: /health
          port: 80
        initialDelaySeconds: 10
      ports:
        - containerPort: 80
          protocol: TCP
