colors.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colors-web
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
  selector:
    app: colors
