colors1.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colors-web
spec:
  selector:
    app: colors
  ports:
    - port: 80
      targetPort: 80
