colors2.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: colors-web2
spec:
  selector:
    app: colors2
  ports:
    - port: 80
      targetPort: 80
